# financial-recurrence-rs

./: Cargo.toml  README.md
src/: lib.rs  occurrences.rs
