[package]
name = "financial_recurrence"
description = "Define recurrence rules for financial transactions"
authors = [
    "Lily Hopkins <lily@hpkns.uk>",
]
repository = "https://github.com/lilopkins/financial-recurrence-rs"
publish = false # until ready
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
