[package]
name = "financial-recurrence"
description = "Define recurrence rules for financial transactions"
authors = [
    "Lily Hopkins <lily@hpkns.uk>",
]
repository = "https://github.com/lilopkins/financial-recurrence-rs"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9.0", features = ["serde"] }
chrono = "0.4.40"
getset = "0.1.5"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "chrono/serde"]
